@@ -11,6 +11,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-56
+2015-12-04 Mikhail S. Dubrovin
+- GlobalUtils.py - add support for Fccd, Timepix, Fli, Pimax (PSAS-139)
+- CalibParsStore.py - add support for Fccd
+  -- TODO: Timepix, Fli, Pimax
+	
 Tag: V00-02-55
 2015-11-09 TJ Lane
 - Added explicit list of BldInfo names to GlobalUtils.py
